# deal

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Deal.xlsx
src/deal/app/: display.py  main.py
src/deal/core/: logic.py  main.py  plotting.py
src/deal/tests/: dataframe.py  thomas.py
