[project]
name = "deal"
version = "0.1"
description = "This is a Streamlit-based web server dashboard that illustrates a Deal game and simulates the banker's offer."
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "streamlit"
]

# Optional metadata
authors = [
    { name = "Thomas Boufikos" }
]

[build-system]
# Required by PEP 517/518
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Tells setuptools: "Look inside src/ for packages"
where = ["src"]