[project]
name = "deal"
version = "0.1"
description = "This is a Streamlit-based web server dashboard that illustrates a Deal game and simulates the banker's offer."
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "streamlit>=1.30"
]

# Optional metadata
authors = [
    { name = "Thomas Boufikos" }
]

[build-system]
# Required by PEP 517/518
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Tells setuptools: "Look inside src/ for packages"
where = ["src"]
